[package]
name = "ws-tcp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rustls = { version = "0.23.34" }
tokio-rustls = { version = "0.26.4" }
hickory-resolver = { version = "0.25.2", features = ["tokio", "system-config"] }
clap = { version = "4.5.23", features = ["derive"] }
pin-project-lite = "0.2.16"
rustls-pki-types = "1.13.2"
webpki-roots = "1.0.4"

[dev-dependencies]
rusmpp = { git = "https://github.com/Rusmpp/Rusmpp", branch = "main", package = "rusmpp" }
rusmppc = { git = "https://github.com/Rusmpp/Rusmpp", branch = "main", package = "rusmppc" }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
